--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,17 +1,27 @@
-[package]
-name = "example"
-version = "0.1.0"
-authors = ["ryotarofr <ryoryo.fr0608@gmail.com>"]
-edition = "2021"
+[workspace]
+resolver = "2"
+members = [
+    "ui",
+    "web",
+    "desktop",
+    "mobile",
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace.dependencies]
+dioxus = { version = "0.6.0" }
 
-[dependencies]
-dioxus = { version = "0.6.0", features = [] }
-dioxus_ui = { path = "../" }   
+# workspace
+ui = { path = "ui" }
 
-[features]
-default = ["web"]
-web = ["dioxus/web"]
-desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
+
